# CCDP-Backend

./: pyproject.toml
src/: __init__.py
src/controllers/: admin_controller.py  patient_controller.py
src/models/: admin.py  patient.py
src/services/: auth_service.py  email_service.py  otp_service.py
